2005-03-02  Rajesh Ranjan <rranjan@redhat.com>
	
	* configure.in: Added Hindi in ALL_LINGUAS

2005-02-28  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.9.92.

2005-02-24  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.c:
	Quit correctly (closes 168018, thanks Raj M Madhan).

2005-02-21  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne "Nepali" in ALL_LINGUAS

2005-02-16  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on gnomevfs 2.9.

	* src/sj-profile-chooser.[ch]:
	* src/Makefile.am:
	Added a clone of the gnome-media profile chooser, which also
	displays the output format type. Inspired by patches from Raj
	Madhan.

	* data/sound-juicer.glade:
	Use the new widget.

2005-02-16  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on GTK+ 2.6.

	* src/sj-about.c:
	Use the new GTK+ API for About dialogs (Crispin Flowerday)

2005-02-15  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Unselect a profile in the combo when the profile in gconf is
	"". Fixes #167470

2005-02-15  Ross Burton  <ross@burtonini.com>

	* README:
	Added kernel module blurb.

2005-02-15  Ross Burton  <ross@burtonini.com>

	* src/sound-juicer.h:
	* src/sj-util.c:
	* src/sj-extractor.c:
	Use gi18n.h (thanks to Crispin Flowerday)

2005-02-15  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	Set the profile key default to a valid profile.

2005-02-08  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on nautilus-burn >= 2.9.

2005-02-08  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.9.91.

	* configure.in:
	* src/Makefile.am:
	* tests/Makefile.am:
	Remove --enable-hal option

2005-02-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-prefs.c:
	Use a GtkFileChooserButton instead of the label+Browse button.

2005-02-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	HIGify the Preferences dialog.
