@@ -1,3 +1,10 @@
+2005-03-02  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-prefs.c:
+	* src/sj-genres.[ch]:
+	* src/sj-main.c:
+	Add consts.
+
 2005-03-02  Rajesh Ranjan <rranjan@redhat.com>
 	
 	* configure.in: Added Hindi in ALL_LINGUAS
